--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.4",
     "sequelize-cli": "^6.2.0",
+    "socket.io": "^4.1.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
